--- a/index.html
+++ b/index.html
@@ -113,5 +113,5 @@ setMood= async function() {
     await MoodContractInstance.write.setMood([mood],{
     account:address
     });
-}
+}dddd
 </script>
