--- a/index.html
+++ b/index.html
@@ -4,24 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-        body {
-          text-align: center;
-          font-family: Arial, Helvetica, sans-serif;
-        }
-      
-        div {
-          width: 20%;
-          margin: 0 auto;
-          display: flex;
-          flex-direction: column;
-        }
-      
-        button {
-          width: 100%;
-          margin: 10px 0px 5px 0px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>LearnWeb3 First dApp</title>
   </head>
   <body>
@@ -113,5 +96,5 @@ setMood= async function() {
     await MoodContractInstance.write.setMood([mood],{
     account:address
     });
-}dddd
+}
 </script>
